--- a/.github/workflows/gh-pages.yaml
+++ b/.github/workflows/gh-pages.yaml
@@ -24,7 +24,7 @@ jobs:
             # Runs a single command using the runners shell
             -   name: Run a one-line script
                 run: |
-                    ./update-gh-pages.sh
+                    ./gh-pages.sh
                     echo completed
                 env:
                     GITHUB_TOKEN: ${{ secrets.github_token }}
