--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "ulid-wasm"
+name = "hello-wasm"
 version = "0.1.0"
 authors = ["codemountains <4kz12zz@gmail.com>"]
 edition = "2018"
